Add price history tracking and events for market transactions
- Introduce PriceHistoryScheduler to capture price snapshots every 20 minutes and hourly for archiving.
- Implement ClientPriceHistoryCache to store price history data on the client side.
- Create PriceHistoryRequestPayload and PriceHistoryResponsePayload for client-server communication regarding price history.
- Add new events: MarketBuyEvent, MarketSellEvent, AuctionBidPlacedEvent, AuctionCancelledEvent, and AuctionFinalizedEvent to notify other mods of market activities.
- Update AuctionState to handle pending notifications for offline players.
- Enhance market GUI to display price history graph with tiered snapshots.